December 2024 9.0
 - Group of (unique) names, organisational roles: added member/owner count to PDF fields
 - Usability improvements (350)
 - LAM Pro:
  -> Request access: added comment field for owners/approvers (339)
  -> Custom scripts: support custom label for module (329)
  -> Custom scripts: support grouping of manual scripts (329)
 - Fixed bugs:
  -> Windows: show more than 1000 LDAP entries when paged results is activated in server profile
  -> WebAuthn: support DNs larger than 64 bytes (358)


24.09.2024 8.9
 - Windows user: support for room number and personal title (needs to be activated in module settings) (343, 344)
 - Usability improvements (354)
 - LAM Pro:
  -> Custom scripts: added wildcard for server/self service profile name (325)
  -> Self registration: added option to generate password
  -> Request access: allow to define an expiration time for memberships/ownerships (284)
  -> Request access: support additional group next to owners (300)
  -> Request access: auto-refresh views (#324)
 - Fixed bugs:
  -> Unix users: error log messages on file upload


22.06.2024 8.8
 - PHP 8.1 or higher required
 - New module to manage SSH keys in AD/Samba 4 (using "altSecurityIdentities") (304)
 - Samba 3: dropped support for LM password hashes (307)
 - Personal: support locked password on file upload (322)
 - Configuration: added filter for available account modules
 - LAM Pro:
  -> Request access: request data can be imported and exported as part of configuration (282)
  -> Request access: added $$approveLink$$ and $$rejectLink$$ in approval mails (289)
  -> Request access: added history (283)
  -> Request access: allow to request group ownership (285)
 - Fixed bugs:
  -> Custom Fields: LDAP search select list - wrong value for empty option (334)
  -> Windows user: "Password does not expire" option sent even when not modified (340)
  -> Windows user: Do not add securityPrincipal object class for existing accounts (341)


16.03.2024 8.7